--- a/frontend/index.html
+++ b/frontend/index.html
@@ -327,7 +327,7 @@
             console.log("data",data);
             $.ajax({
                 type: 'POST',
-                url: 'http://localhost:3000/endpoint',
+                url: 'http://clocklp2.herokuapp.com/endpoint',
                 data: data,
                 success: function(data) {
                     console.log('success');
