--- a/public/index.html
+++ b/public/index.html
@@ -250,7 +250,7 @@
                     <h2 class="title">Заполните форму,что бы мы смогли с вами связаться</h2>
                     <input type="text" id="clientName" placeholder="Ваше имя">
                     <br>
-                    <input type="number" id="clientPhone" placeholder="Номер сотового телефона">
+                    <input type="text" id="clientPhone" placeholder="Номер сотового телефона">
                     <p class="error">Пожалуйста заполните пуcтые поля</p>
                     <button type="button" id="sendToMail" class="pink-button">Получить часы!</button>
             </div>
