--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,11 @@
 <!--<![endif]-->
 <head>
     <meta charset="utf-8"/>
-    <title>Task</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name=”description” content=”Оригинальные детские часы с GPS трекером и с SIM картой. Умные часы-телефон Smart Baby Watch Q50, Wonlex”/>
+    <meta name=”robots” content=”noindex, nofollow” />
+    <title>Лучшие умные часы для детей Wonlex по низким ценам c гарантией</title>
 
     <!-----------------------  CSS ------------------------->
     <link rel="stylesheet" href="font-awesome.css">
@@ -26,9 +28,9 @@
     <a href="" class="scrollToTop shake"><i class="fa fa-phone"></i></a>
     <header class="header">
         <img class="logo" src="assets/img/logo.png" alt="logo">
-        <p class="header_text">
+        <h2 class="header_text">
             Официальный дилер умных часов в Казахстане
-        </p>
+        </h2>
         <div class="phone-section">
             <i class="fa fa-phone"></i>
             <span>​+7 702 7837 080</span>
@@ -37,7 +39,7 @@
     <div class="main-content">
         <div class="section_1 section">
 
-            <h1 class="title">Оригинальные детские часы с GPS-трекером от <br> Wonlex</h1>
+            <h1 class="title">Оригинальные детские часы с GPS-трекером от <br> Wonlex в Алматы</h1>
             <div class="section_1_bottom">
                 <img class="wow bounceIn main-img" data-wow-duration="1.2s" src="assets/img/section1.png" alt="часы">
                 <div class="about">
@@ -176,7 +178,7 @@
                 <div class="clock wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                     <div class="title">Wonlex GPS Watch GW700</div>
                     <img class="clock-img" src="assets/img/section2_img3.jpg.jpg" alt="часы">
-                    <p class="descr">Детские часы с GPS-трекером для подростков</p>
+                    <p class="descr">Лучшие часы с GPS-трекером для подростков</p>
                     <p class="sale">Скидка 40% !</p>
                     <div class="price">
                         <p class="price_original">49 975 тг.</p>
@@ -278,7 +280,7 @@
                 <img class="insta-img" src="assets/img/Instagram-logo.png" alt="">
                 <span class="insta-text">@SMART_KID_WATCH</span>
             </div>
-            <a href="" class="follow">подписаться</a>
+            <a target="_blank" href="https://www.instagram.com/smart_kid_watch/" class="follow">подписаться</a>
         </div>
 
     </div>
@@ -332,6 +334,7 @@
 <!--<script src="index.module.js"></script>-->
 <!--<script src="index.route.js"></script>-->
 <!--<script src="index.js"></script>-->
+
 <script>
     $(document).ready(function(){
         var modal = document.getElementById('myModal');
@@ -437,16 +440,14 @@
             }
         };
 
-        var wow = new WOW(
-                {
+        var wow = new WOW({
                     boxClass:     'wow',
                     animateClass: 'animated',
                     offset:       0,
                     mobile:       true,
                     live:         true,
                     scrollContainer: null
-                }
-        );
+                });
         wow.init();
     });
 </script>
